# waste-recognition-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  main.py  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yml  tests.yml
deploy/: Dockerfile.dev  entrypoint.sh
src/: app.py
src/api/v1/: __init__.py
src/api/v1/routers/: wastes.py
src/app/: application.py  config.py  main.py
src/app/api/v1/: __init__.py
src/app/api/v1/routers/: __init__.py  wastes.py
src/models/trash_classification_model/1/: fingerprint.pb  saved_model.pb
src/models/trash_classification_model/1/variables/: variables.index
tests/: conftest.py  test_wastes.py
